// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/FileDrop Accept JSON 1`] = `
<div
  className="storybook-container"
>
  <div
    data-testid="file-drop"
  >
    <strong
      className="bx--label"
      data-testid="file-drop-title"
    >
      Upload Files
    </strong>
    <input
      accept={
        Array [
          "json",
        ]
      }
      data-testid="file-drop-file-input"
      multiple={true}
      onChange={[Function]}
      style={
        Object {
          "visibility": "hidden",
        }
      }
      type="file"
    />
    <div
      className="iot--file-drop__text"
      data-testid="file-drop-drop-zone"
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "border": "1px dashed #8C8C8C",
        }
      }
    >
      <div>
        Drag and drop your file here or 
        <span
          onClick={[Function]}
          role="presentation"
        >
          <button
            className="iot--file-drop__link-button"
            data-testid="file-drop-link-button"
            type="button"
          >
            Try it out!
          </button>
        </span>
        <div>
          Only JSON can be uploaded
        </div>
      </div>
    </div>
    <div
      className="bx--file-container"
    />
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/FileDrop Browse 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--form-item"
    data-testid="file-drop"
    id="FileUploader"
  >
    <strong
      className="bx--label"
      data-testid="file-drop-title"
    >
      Upload Files
    </strong>
    <p
      className="bx--label-description"
      data-testid="file-drop-description"
    >
      Any file can be uploaded.  Feel free to upload more than one!
    </p>
    <label
      aria-disabled={false}
      className="bx--btn bx--btn--secondary"
      data-testid="file-drop-uploader-button"
      htmlFor="id12"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <span
        role="button"
      >
        Try it out!
      </span>
    </label>
    <input
      accept={Array []}
      className="bx--visually-hidden"
      disabled={false}
      id="id12"
      multiple={true}
      onChange={[Function]}
      onClick={[Function]}
      tabIndex="-1"
      type="file"
    />
    <div
      className="bx--file-container"
    />
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/FileDrop Browse only one 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--form-item"
    data-testid="file-drop"
    id="FileUploader"
  >
    <strong
      className="bx--label"
      data-testid="file-drop-title"
    >
      Upload Files
    </strong>
    <p
      className="bx--label-description"
      data-testid="file-drop-description"
    >
      Only one file can be uploaded
    </p>
    <label
      aria-disabled={false}
      className="bx--btn bx--btn--secondary"
      data-testid="file-drop-uploader-button"
      htmlFor="id13"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <span
        role="button"
      >
        Try it out!
      </span>
    </label>
    <input
      accept={Array []}
      className="bx--visually-hidden"
      disabled={false}
      id="id13"
      multiple={false}
      onChange={[Function]}
      onClick={[Function]}
      tabIndex="-1"
      type="file"
    />
    <div
      className="bx--file-container"
    />
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/FileDrop Drag and drop 1`] = `
<div
  className="storybook-container"
>
  <div
    data-testid="file-drop"
  >
    <strong
      className="bx--label"
      data-testid="file-drop-title"
    >
      Upload Files
    </strong>
    <input
      accept={Array []}
      data-testid="file-drop-file-input"
      multiple={true}
      onChange={[Function]}
      style={
        Object {
          "visibility": "hidden",
        }
      }
      type="file"
    />
    <div
      className="iot--file-drop__text"
      data-testid="file-drop-drop-zone"
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "border": "1px dashed #8C8C8C",
        }
      }
    >
      <div>
        Drag and drop your file here or 
        <span
          onClick={[Function]}
          role="presentation"
        >
          <button
            className="iot--file-drop__link-button"
            data-testid="file-drop-link-button"
            type="button"
          >
            Try it out!
          </button>
        </span>
        <div>
          Any file can be uploaded.  Feel free to upload more than one!
        </div>
      </div>
    </div>
    <div
      className="bx--file-container"
    />
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/FileDrop Drag only one file 1`] = `
<div
  className="storybook-container"
>
  <div
    data-testid="file-drop"
  >
    <strong
      className="bx--label"
      data-testid="file-drop-title"
    >
      Upload Files
    </strong>
    <input
      accept={Array []}
      data-testid="file-drop-file-input"
      multiple={false}
      onChange={[Function]}
      style={
        Object {
          "visibility": "hidden",
        }
      }
      type="file"
    />
    <div
      className="iot--file-drop__text"
      data-testid="file-drop-drop-zone"
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "border": "1px dashed #8C8C8C",
        }
      }
    >
      <div>
        Drag and drop your file here or 
        <span
          onClick={[Function]}
          role="presentation"
        >
          <button
            className="iot--file-drop__link-button"
            data-testid="file-drop-link-button"
            type="button"
          >
            Try it out!
          </button>
        </span>
        <div>
          Only one file can be uploaded
        </div>
      </div>
    </div>
    <div
      className="bx--file-container"
    />
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/FileDrop Show files false 1`] = `
<div
  className="storybook-container"
>
  <div
    data-testid="file-drop"
  >
    <strong
      className="bx--label"
      data-testid="file-drop-title"
    >
      Upload Files
    </strong>
    <input
      accept={Array []}
      data-testid="file-drop-file-input"
      multiple={false}
      onChange={[Function]}
      style={
        Object {
          "visibility": "hidden",
        }
      }
      type="file"
    />
    <div
      className="iot--file-drop__text"
      data-testid="file-drop-drop-zone"
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "border": "1px dashed #8C8C8C",
        }
      }
    >
      <div>
        Drag and drop your file here or 
        <span
          onClick={[Function]}
          role="presentation"
        >
          <button
            className="iot--file-drop__link-button"
            data-testid="file-drop-link-button"
            type="button"
          >
            Try it out!
          </button>
        </span>
        <div>
          Only one file can be uploaded
        </div>
      </div>
    </div>
  </div>
</div>
`;
